# TrelloReplica

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  database.db  docker-compose.prod.yml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  traefik.dev.toml
app/: database.py  models.py
tests/: __init__.py  test_auth.py  test_data.py  test_views.py
website/: base.py  config.py  database.db  database.py  models.py  schemas.py
website/migrations/: env.py
website/migrations/versions/: ccab45594a99_initial_migration.py  d84227791de4_second_migration.py
website/routers/: .env  __init__.py  auth.py  bot.py  export_import.py  views.py
website/static/css/: main_style.css
website/templates/: add_board.html  add_collaborator.html  add_theme.html  base.html  edit_board.html  edit_profile.html  edit_task.html  edit_theme.html  export_import.html  home.html  login.html  my_boards.html  no_board.html  signup.html  subscribe_on_events.html  view_board.html  view_themes.html
