[tool.poetry]
name = "trelloreplica"
version = "0.1.0"
description = ""
authors = ["Andrew <samysenko_a@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "2.20"
aiohttp = "3.8.1"
aiosignal = "1.2.0"
alembic = "1.7.7"
anyio = "3.5.0"
asgiref = "3.5.0"
async-timeout = "4.0.2"
atomicwrites = "1.4.0"
attrs = "21.4.0"
Authlib = "1.0.1"
Babel = "2.9.1"
certifi = "2021.10.8"
cffi = "1.15.0"
charset-normalizer = "2.0.12"
click = "8.1.2"
colorama = "0.4.4"
cryptography = "37.0.1"
fastapi = "0.75.2"
fastapi-login = "1.8.0"
frozenlist = "1.3.0"
greenlet = "1.1.2"
h11 = "0.11.0"
httpcore = "0.14.7"
httptools = "0.4.0"
httpx = "0.22.0"
idna = "3.3"
iniconfig = "1.1.1"
itsdangerous = "2.1.2"
Jinja2 = "3.1.1"
Mako = "1.2.0"
MarkupSafe = "2.1.1"
multidict = "6.0.2"
packaging = "21.3"
passlib = "1.7.4"
pluggy = "1.0.0"
py = "1.11.0"
pycparser = "2.21"
pydantic = "1.9.0"
PyJWT = "2.3.0"
pyparsing = "3.0.9"
pytest = "7.1.2"
python-dotenv = "0.20.0"
python-multipart = "0.0.5"
pytz = "2022.1"
PyYAML = "6.0"
requests = "2.27.1"
rfc3986 = "1.5.0"
six = "1.16.0"
sniffio = "1.2.0"
SQLAlchemy = "1.4.35"
starlette = "0.17.1"
tomli = "2.0.1"
typing-extensions = "4.2.0"
urllib3 = "1.26.9"
uvicorn = "0.17.6"
watchgod = "0.8.2"
websockets = "10.3"
Werkzeug = "2.1.2"
yarl = "1.7.2"
asyncpg = "0.22.0"
psycopg2-binary = "2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry==1.1.12", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

